# geapTimes

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CODE_STANDARDS.md  PLANS.md  README.md  pyproject.toml  requirements.txt
config/: base_config.yaml  comparison_config.yaml
data_notebooks/: 01_citibike_prep.ipynb  02_timesfm_local.ipynb  03_experiment_tracking.ipynb
docs/notes/: automl-eval-metric-comparability.md  forecasting-covariate-and-model-constraints.md  pipeline-parallelfor-deferred.md  stage-3-experiment-tracking-live-run.md  stage-4-managed-pipelines-live-run.md  stage-5-warm-endpoint-reuse-live-run.md  timesfm-endpoint-reuse-design.md
docs/plans/: 001_stage-1-data-architecture-and-config-schema.md  002_stage-2-model-factory-and-forecaster-abstractions.md  003_stage-3-experiment-tracking-and-doe-framework.md  004_stage-4-managed-pipelines-and-cloud-orchestration.md  005_stage-4-redesign-train-inference-split.md  006_stage-5-standardized-evaluation-and-entry-point.md  007_post-stage5-eval-audit-and-tooling.md  README.md
scripts/: demo_timesfm.py  run_experiment.py  setup_gcp.py
src/geaptimes/: __init__.py  constants.py  gcp.py  naming.py  schemas.py
src/geaptimes/data/: __init__.py  queries.py
src/geaptimes/experiment/: __init__.py  cli.py  comparison.py  doe.py  metrics.py  overrides.py  runner.py  tracking.py
src/geaptimes/models/: __init__.py  automl.py  base.py  bqml.py  factory.py  timesfm.py  timesfm_core.py
src/geaptimes/pipelines/: __init__.py  compile.py  components.py  config.py  pipeline.py  steps.py  submit.py
src/geaptimes/pipelines/container/: Dockerfile  (+1 more)
src/geaptimes/utils/: __init__.py  logger.py
tests/: test_automl.py  test_base_config.py  test_bqml.py  test_comparison.py  test_doe.py  test_factory.py  test_logger.py  test_metrics.py  test_models_base.py  test_naming.py  test_pipeline_compile.py  test_pipeline_components.py  test_pipeline_config.py  test_pipeline_steps.py  test_pipeline_submit.py  test_queries.py  test_run_experiment_cli.py  test_runner.py  test_schemas.py  test_serving_app.py  test_serving_predictor.py  test_setup_gcp.py  test_timesfm.py  test_timesfm_core.py  test_tracking.py
(+3 files in other folders)
